# eruption-cloud-jhistorical

./: .gitignore  README.md  pyproject.toml
data/Sakurajima1914/: 20cr_sakurajima_19140112_00UTC.csv  20cr_sakurajima_19140112_03UTC.csv
eruptions/: catalog.yaml
ipynb/Komagatake1929/: Komagatake1929-20CR.ipynb  Komagatake1929-20CR_Qdet.ipynb
ipynb/Komagatake1929/csv/: 20cr_komagatake_19290617_03UTC.csv  komagatake1929_fit_z13900m_19290617_03UTC.csv
ipynb/Sakurajima1914/: Sakurajima1914-20CR.ipynb  Sakurajima1914-20CV_Qdet.ipynb
ipynb/Sakurajima1914/csv/: sakurajima1914_fit_z18000m_19140112_00UTC.csv
ipynb/Tokachi1962/: Tokachi1962-ERA5.ipynb  Tokachi1962-ERA5_Qdet.ipynb  Tokachi1962-ERA5_final.ipynb  Tokachi1962-ERA5_v2.ipynb
ipynb/Tokachi1962/csv/: era5_tokachi_19620629_18UTC.csv  tokachi1962_fit_z12000m_19620629_18UTC.csv
ipynb/Usu1977/: Untitled.ipynb  Usu1977-ERA5-v2.ipynb  Usu1977-ERA5.ipynb  Usu1977-ERA5_Qdet.ipynb
ipynb/Usu1977/csv/: era5_usuzan_19770807_02UTC.csv  usuzan1977_fit_z12000m_19770807_02UTC.csv
scripts/: fetch_data.py  forward.py  forward2.py  forward3.py  forward_qdet_u150.py  merge_forward3.py  plot_discharge_rate.py  plume_rose.py  qdet.py  qh_sensitivity.py  qh_sensitivity_each.py
src/: __init__.py  atmos_profile.py  plume_model.py
src/loader/: cr20.py  era5.py
